syntax = "proto3";

package protobuf.gsr.demo;

option csharp_namespace = "ProtobufGSRKafkaDemo.Messages";

import "google/protobuf/timestamp.proto";

message Event {
  string event_id = 1;
  string user_id = 2;
  string session_id = 3;
  EventMetadata metadata = 4;
  UserContext user_context = 5;
  DeviceInfo device_info = 6;
  map<string, string> properties = 7;
  map<string, string> tags = 8;
  repeated Event event_chain = 9;
  google.protobuf.Timestamp timestamp = 10;
  optional double duration_ms = 11;
  EventType type = 12;
}

message EventMetadata {
  string source = 1;
  string version = 2;
  string correlation_id = 3;
  int32 sequence_number = 4;
}

message UserContext {
  string ip_address = 1;
  string user_agent = 2;
  string referrer = 3;
  Location location = 4;
}

message Location {
  string country = 1;
  string region = 2;
  string city = 3;
  optional double latitude = 4;
  optional double longitude = 5;
}

message DeviceInfo {
  string device_id = 1;
  string platform = 2;
  string os_version = 3;
  string app_version = 4;
  bool is_mobile = 5;
}

enum EventType {
  UNKNOWN_EVENT = 0;
  PAGE_VIEW = 1;
  CLICK = 2;
  PURCHASE = 3;
  LOGIN = 4;
  LOGOUT = 5;
  SEARCH = 6;
  ERROR = 7;
}