syntax = "proto3";

package protobuf.gsr.demo;

option csharp_namespace = "ProtobufGSRKafkaDemo.Messages";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  UserStatus status = 4;
}

enum UserStatus {
  UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  SUSPENDED = 3;
}