syntax = "proto3";

package protobuf.gsr.demo;

option csharp_namespace = "ProtobufGSRKafkaDemo.Messages";

message Product {
  string sku = 1;
  string name = 2;
  double price = 3;
  ProductCategory category = 4;
  bool in_stock = 5;
}

enum ProductCategory {
  UNKNOWN_CATEGORY = 0;
  ELECTRONICS = 1;
  CLOTHING = 2;
  BOOKS = 3;
  HOME = 4;
  SPORTS = 5;
}